--- a/Day-2/styles.css
+++ b/Day-2/styles.css
@@ -173,7 +173,7 @@ footer {
     align-items: center;
     justify-content: center;
     text-align: center;
-    color: #333;
+    color: blue;
     background: #f0f0f0;
     margin: 0 1px;
     position: relative;
